# skills

./: .gitignore  .waza.yaml  AGENTS.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
evals/: README.md  pyproject.toml
evals/camunda-ai-agent/: eval.yaml
evals/camunda-ai-agent/tasks/: quality-async-tool-webhook.yaml  quality-model-agent-process.yaml  quality-multi-turn-context.yaml  quality-tool-with-fromai.yaml
evals/camunda-bpmn/: eval.yaml  trigger_tests.yaml
evals/camunda-bpmn/graders/: bpmn-lint.sh
evals/camunda-bpmn/tasks/: neg-camunda-7-bpmn.yaml  neg-cluster-setup.yaml  neg-connector-config.yaml  neg-deploy-existing.yaml  neg-feel-only.yaml  neg-form-only.yaml  neg-graphviz.yaml  neg-incident-debug.yaml  neg-state-machine.yaml  neg-uml-activity.yaml  pos-add-error-boundary.yaml  pos-call-activity.yaml  pos-create-approval-flow.yaml  pos-fix-existing.yaml  pos-message-event.yaml  pos-multi-instance.yaml  pos-parallel-gateway.yaml  pos-timer-boundary.yaml  pos-validate-bpmn.yaml  pos-zeebe-task-definition.yaml  quality-multi-instance-parallel.yaml  quality-validate-and-fix.yaml  quality-zeebe-retries-and-headers.yaml
evals/camunda-c8ctl/: eval.yaml
evals/camunda-c8ctl/tasks/: quality-install-plugin.yaml  quality-list-deployments.yaml  quality-local-cluster-bootstrap.yaml  quality-saas-profile-setup.yaml
evals/camunda-connectors/: eval.yaml
evals/camunda-connectors/tasks/: quality-configure-slack.yaml  quality-discover-messaging-connectors.yaml  quality-http-rest-fetch.yaml
evals/camunda-feel/: eval.yaml  trigger_tests.yaml
evals/camunda-feel/graders/: feel-evaluate.sh
evals/camunda-feel/tasks/: neg-bpmn-only.yaml  neg-cluster-setup.yaml  neg-connector-config.yaml  neg-deploy-only.yaml  neg-form-only.yaml  neg-generic-python.yaml  neg-incidents.yaml  neg-juel-conversion.yaml  neg-plain-english-business.yaml  neg-script-task-js.yaml  pos-context-access.yaml  pos-debug-feel.yaml  pos-discount-calc.yaml  pos-dmn-input-entry.yaml  pos-form-validation.yaml  pos-gateway-condition.yaml  pos-input-mapping.yaml  pos-list-projection.yaml  pos-string-manipulation.yaml  pos-timer-duration.yaml  quality-evaluate-debug.yaml  quality-every-quantifier.yaml  quality-first-element-access.yaml
evals/camunda-forms/: eval.yaml
evals/camunda-forms/schemas/: form.schema.json
evals/camunda-forms/tasks/: quality-basic-form.yaml  quality-conditional-form.yaml  quality-dynamic-values.yaml
evals/camunda-process-mgmt/: eval.yaml
evals/camunda-process-mgmt/tasks/: quality-check-deployment-status.yaml  quality-complete-user-task.yaml  quality-deploy-and-start-instance.yaml  quality-deploy-bpmn.yaml  quality-list-running-instances.yaml  quality-resolve-incident.yaml
evals/docs/: ci.md  concepts.md  runbook.md
evals/lib/: boot_cluster.py  cluster_assertions.py  inspect_transcript.py  metadata.py  registry.py  run_cpt.py  sandboxes.py
evals/sandboxes/: base.Dockerfile  compose-advisory.yaml  compose-base.yaml  compose-cpt-verifier.yaml  compose-with-c8ctl.yaml  compose.yaml  docker-bake.hcl  verifier.Dockerfile  with-c8ctl.Dockerfile
evals/sandboxes/orchestration/: application-h2.yaml
evals/scenarios/00-c8ctl-bootstrap/: baseline.json  task.py
evals/scenarios/01-rocket-launch/: baseline.json  task.py
evals/scenarios/c8ctl-bootstrap/: baseline.json  outcomes.py  outcomes_baseline.json  task.py
evals/scenarios/dev-routing/: baseline.json  task.py
evals/scenarios/rocket-launch/: baseline.json  outcomes.py  outcomes_baseline.json  task.py
evals/scripts/: regen_baseline.py
evals/skills/: _triggers.py
evals/skills/camunda-ai-agents/: triggers.py  triggers.yaml
evals/skills/camunda-bpmn/: outcomes.py  outcomes_baseline.json  triggers.py  triggers.yaml
evals/skills/camunda-c8ctl/: outcomes.py  outcomes_baseline.json  triggers.py  triggers.yaml
evals/skills/camunda-connectors/: triggers.py  triggers.yaml
evals/skills/camunda-connectors-development/: triggers.py  triggers.yaml
evals/skills/camunda-development/: outcomes.py  outcomes_baseline.json  task.py  triggers.py  triggers.yaml
evals/skills/camunda-dmn/: triggers.py  triggers.yaml
evals/skills/camunda-docs/: triggers.py  triggers.yaml
evals/skills/camunda-feel/: outcomes.py  outcomes_baseline.json  task.py  triggers.py  triggers.yaml
evals/skills/camunda-forms/: triggers.py  triggers.yaml
evals/skills/camunda-job-workers/: outcomes.py  triggers.py  triggers.yaml
evals/skills/camunda-process-mgmt/: triggers.py  triggers.yaml
evals/skills/camunda-process-test/: triggers.py  triggers.yaml
evals/src/core/: agents.py  metadata.py  metrics.py  paths.py  registry.py  scorers.py  triggers.py
evals/src/eval_harness/: deploy_bpmn.py  inspect_transcript.py  metadata.py  paths.py  registry.py
evals/src/scorers/: bpmn_lint.py  cluster.py  cpt.py  feel.py  lint.py  llm_judge.py  reducers.py  transcript.py  worker.py
evals/src/scripts/: build_matrix.py  extract_artifacts.py  pass_fail.py  regen_baseline.py  regenerate_baseline.py  summarize.py
evals/src/solvers/: boot_cluster.py  collect_artifacts.py
tools/eval-runner/: .skill-creator-sha  AGENTS.md  baseline.py  cli.py  paths.py  pyproject.toml  quality_eval.py  report.py  sdk_runner.py  trigger_eval.py
tools/eval-runner/tests/: test_baseline.py  test_bpmn_lint_verifier.py  test_feel_verifier.py  test_paths.py  test_quality_eval.py  test_report.py  test_sdk_runner.py  test_trigger_eval.py
tools/eval-runner/verifiers/: __init__.py  bpmn_lint.py  feel_evaluate.py
tools/skill-lint/: check.py  pyproject.toml
(+140 files in other folders)
