[project]
name = "camunda-skills-evals"
version = "0.1.0"
description = "Qualitative evaluation suite for camunda/skills. See ../docs/plans/01-eval-suite.md."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aioboto3>=15.5.0",
    "anthropic>=0.104.0",
    "inspect-ai>=0.3.158",
    "openai>=2.38.0",
]

[project.scripts]
evals-list = "core.registry:main"
evals-regen-baseline = "scripts.regen_baseline:main"
evals-summarize = "scripts.summarize:main"
evals-extract-artifacts = "scripts.extract_artifacts:main"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/core",
    "src/scorers",
    "src/solvers",
    "src/scripts",
]
